<resources>
    <string name="app_name">Forumproject</string>
    <string name="action_settings">Settings</string>
    <string name="postDate">Date of post</string>
    <string name="title">Title</string>
    <string name="post">Post</string>
    <string name="text">Post Text</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
</resources>
